--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ WTForms~=3.0.0
 itsdangerous~=2.0.1
 SQLAlchemy~=1.4.28
 Werkzeug~=2.0.2
+flask-migrate~=3.1.0
 alembic~=1.7.5
 multidict~=5.2.0
+gunicorn~=20.1.0
