--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 Flask~=2.0.2
+Flask-Login~=0.5.0
+Flask-Mail~=0.9.1
+Flask-Migrate~=3.1.0
+Flask-SQLAlchemy~=2.5.1
+Flask-WTF~=1.0.0
 python-dotenv~=0.19.1
 WTForms~=3.0.0
 itsdangerous~=2.0.1
 SQLAlchemy~=1.4.28
+Jinja2~=3.0.3
 Werkzeug~=2.0.2
-flask-migrate~=3.1.0
 alembic~=1.7.5
 multidict~=5.2.0
 gunicorn~=20.1.0
+psycopg2==2.9.1
